--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8号店铺</title>
+    <title>灰度网络</title>
     <style>
         body {
             font-family: 'Helvetica', 'Arial', sans-serif;
@@ -80,8 +80,8 @@
 <body>
 
 <header>
-    <h1>欢迎来到8号店铺</h1>
-    <p>我们提供优质的产品，欢迎选购！</p>
+    <h1>灰度空间</h1>
+    <p>********</p>
 </header>
 
 <section>
@@ -115,15 +115,16 @@
         </div>
     </div>
 
-    <h2>联系我们</h2>
-    <p>有任何问题，请通过以下邮件联系我：</p>
-    <p><a href="mailto:lisondawang@outlook.com" style="color: #2980b9;">lisondawang@outlook.com</a></p>
+    <h2>联系方式</h2>
+    <p>电报方式：https://t.me/feilongjian</p>
+    <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">huiduwangluo@outlook.com</a></p>
 
 </section>
 
 <footer>
-    <p>&copy; 2025 8号店铺. All rights reserved.</p>
+    <p>&copy; 灰度空间. All rights reserved.</p>
 </footer>
 
 </body>
 </html>
+
