--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
     <h2>联系方式</h2>
     <p>电报方式：https://t.me/feilongjian</p>
+    <a href="https://t.me/feilongjian" target="_blank">联系我</a>
     <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">huiduwangluo@outlook.com</a></p>
 
 </section>
@@ -127,4 +128,5 @@
 
 </body>
 </html>
+
 
