--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
     </div>
 
     <h2>联系方式</h2>
-    <p>电报方式：https://t.me/feilongjian</p>
-    <a href="https://t.me/feilongjian" target="_blank">联系我</a>
-    <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">huiduwangluo@outlook.com</a></p>
+    <a href="https://t.me/feilongjian" target="_blank">电报：https://t.me/feilongjian</a>
+    <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">邮箱：huiduwangluo@outlook.com</a></p>
 
 </section>
 
@@ -128,5 +127,6 @@
 
 </body>
 </html>
+
 
 
