--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>订单支付 - 8号店铺</title>
+  <title>订单支付 - 灰度网络</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; text-align: center; }
     header { background: #2c3e50; color: white; padding: 20px 0; }
