--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
 
 <header>
     <h1>灰度空间</h1>
+    <p>
+⚠️ 转账须知
+请使用 比特币网络（BTC） 向我转账。
+我的地址是：bc1psmtw4y4pc2tyv0kd5dz59ufsl6m0q9spcua2vzfqet7vx77sn7aq527l9u
+📌 注意：
+只能选择 Bitcoin 网络（BTC Mainnet）。
+请不要使用 BEP20（BSC）、TRC20（波场）、ERC20（以太坊） 或其他网络，否则资产将无法找回。
+    </p>
+
+    
 </header>
 
 <section>
@@ -126,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
