--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 <section>
     <div class="product">
         <div>
-            <img src="images/gmail.jpg" alt="产品编号1">
-            <p>产品编号1:谷歌新邮箱</p>
-            <p>（新邮箱都有300美元优惠活动）</p>
-            <p class="price">$30.00</p>
-            <a href="payment.html?product=product1&price=30" class="btn">购买</a>
+            <img src="images/vpn.png" alt="产品编号1">
+            <p>产品编号1:节点套餐一</p>
+            <p>8美元/月：无限流量（注：不允许挖矿）</p>
+            <p class="price">$8.00</p>
+            <a href="payment.html?product=product1&price=8" class="btn">购买</a>
         </div>
         <div>
             <img src="images/yahoo.png" alt="产品编号2">
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
