--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <img src="images/vpn.png" alt="产品编号1">
             <p>产品编号1:节点套餐一</p>
             <p>8美元/月：无限流量（注：不允许挖矿）</p>
+            <p>单人专线、解锁主流AI、netflix</p>
             <p class="price">$8.00</p>
             <a href="payment.html?product=product1&price=8" class="btn">购买</a>
         </div>
@@ -135,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
