--- a/index.html
+++ b/index.html
@@ -103,25 +103,21 @@
             <a href="payment.html?product=product1&price=8" class="btn">购买</a>
         </div>
         <div>
-            <img src="images/yahoo.png" alt="产品编号2">
-            <p>产品编号2：yahoo新邮箱</p>
-            <p class="price">$31.00</p>
-            <a href="payment.html?product=product2&price=31" class="btn">购买</a>
-        </div>
+            <img src="images/vpn.png" alt="产品编号2">
+            <p>产品编号2：节点套餐二</p>
+            <p>3美元/月：50G/月（注：不允许挖矿）</p>
+            <p>单人专线、解锁主流AI、netflix</p>
+            <p class="price">$3.00</p>
+            <a href="payment.html?product=product2&price=3" class="btn">购买</a>
+        </div> 
         <div>
-            <a href="images/steam1.jpg" target="_blank">
-            <img src="images/steam1.jpg" alt="产品编号3">
-            </a>
-            <p>产品编号3:steam账号</p>
-            <p class="price">$78.00</p>
-            <a href="payment.html?product=product3&price=78" class="btn">购买</a>
-        </div>
-        <div>
-            <img src="images/telegram.png" alt="产品编号4">
-            <p>产品编号4:telegram账号</p>
-            <p class="price">$60.00</p>
-            <a href="payment.html?product=product4&price=60" class="btn">购买</a>
-        </div>
+            <img src="images/vpn.png" alt="产品编号3">
+            <p>产品编号3：节点套餐三</p>
+            <p>80美元/年：无限流量（注：不允许挖矿）</p>
+            <p>单人专线、解锁主流AI、netflix</p>
+            <p class="price">$80.00</p>
+            <a href="payment.html?product=product3&price=80" class="btn">购买</a>
+        </div>  
     </div>
 
     <h2>联系方式</h2>
@@ -136,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
