--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <a href="https://t.me/feilongjian" target="_blank">电报：https://t.me/feilongjian</a>
     <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">邮箱：huiduwangluo@outlook.com</a></p>
     <h2>应用程序下载</h2>
-    <p>Windows/Mac（v2rayN）：https://github.com/2dust/v2rayN/releases/tag/7.12.7
-Android（NekoBox）：https://github.com/MatsuriDayo/NekoBoxForAndroid/releases/tag/1.3.9
-IOS/Mac（shadowrocket）：https://apps.apple.com/app/shadowrocket/id932747118</p>
+    <p>Windows/Mac（v2rayN）：https://github.com/2dust/v2rayN/releases/tag/7.12.7</p>
+    <p>Android（NekoBox）：https://github.com/MatsuriDayo/NekoBoxForAndroid/releases/tag/1.3.9</p>
+    <p>IOS/Mac（shadowrocket）：https://apps.apple.com/app/shadowrocket/id932747118</p>
 
 </section>
 
@@ -136,6 +136,7 @@ IOS/Mac（shadowrocket）：https://apps.apple.com/app/shadowrocket/id932747118<
 
 </body>
 </html>
+
 
 
 
