--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 我的地址是：bc1psmtw4y4pc2tyv0kd5dz59ufsl6m0q9spcua2vzfqet7vx77sn7aq527l9u
     </p>
     <p>
-📌 注意：只能选择 Bitcoin 网络（BTC Mainnet）。请不要使用 BEP20（BSC）、TRC20（波场）、ERC20（以太坊） 或其他网络，否则资产将无法找回。
+📌 注意：只能选择 Bitcoin 网络（BTC Mainnet）。请不要使用 BEP20（BSC）、TRC20（波场）、ERC20（以太坊） 或其他网络。
     </p>
 
     
@@ -136,6 +136,7 @@
 
 </body>
 </html>
+
 
 
 
