--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
     </div>
 
     <h2>联系方式</h2>
-    <a href="https://t.me/feilongjian" target="_blank">电报：https://t.me/feilongjian</a>
-    <p><a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">邮箱：huiduwangluo@outlook.com</a></p>
+    <a href="mailto:huiduwangluo@outlook.com" style="color: #2980b9;">邮箱：huiduwangluo@outlook.com</a>
     <h2>应用程序下载</h2>
     <p>Windows/Mac（v2rayN）：https://github.com/2dust/v2rayN/releases/tag/7.12.7</p>
     <p>Android（NekoBox）：https://github.com/MatsuriDayo/NekoBoxForAndroid/releases/tag/1.3.9</p>
@@ -136,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
