--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img src="images/vpn.png" alt="产品编号1">
             <p>产品编号1:节点套餐一</p>
             <p>8美元/月：无限流量（注：不允许挖矿）</p>
-            <p>单人专线、解锁主流AI、netflix</p>
+            <p>福利：单人专线、解锁主流AI、netflix</p>
             <p class="price">$8.00</p>
             <a href="payment.html?product=product1&price=8" class="btn">购买</a>
         </div>
@@ -106,7 +106,7 @@
             <img src="images/vpn.png" alt="产品编号2">
             <p>产品编号2：节点套餐二</p>
             <p>3美元/月：50G/月（注：不允许挖矿）</p>
-            <p>单人专线、解锁主流AI、netflix</p>
+            <p>福利：单人专线、解锁主流AI、netflix</p>
             <p class="price">$3.00</p>
             <a href="payment.html?product=product2&price=3" class="btn">购买</a>
         </div> 
@@ -114,7 +114,7 @@
             <img src="images/vpn.png" alt="产品编号3">
             <p>产品编号3：节点套餐三</p>
             <p>80美元/年：无限流量（注：不允许挖矿）</p>
-            <p>单人专线、解锁主流AI、netflix</p>
+            <p>福利：单人专线、解锁主流AI、netflix</p>
             <p class="price">$80.00</p>
             <a href="payment.html?product=product3&price=80" class="btn">购买</a>
         </div>  
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
