--- a/payment.html
+++ b/payment.html
@@ -19,11 +19,10 @@
 
 <header>
   <h1>订单支付</h1>
-  <p>请扫码付款，并填写订单信息</p>
+  <p>扫码得到比特币钱包地址，请向钱包转入购买的金额，并填写订单信息</p>
 </header>
 
 <div class="qr-code">
-  <p>👉 扫码付款：</p>
   <img src="images/pay.png" alt="付款二维码">
 </div>
 
