--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
             <p class="price">$80.00</p>
             <a href="payment.html?product=product3&price=80" class="btn">购买</a>
         </div>  
+        <div>
+            <img src="images/ll.png" alt="产品编号4">
+            <p>产品编号4：流量套餐1G/3天</p>
+            <p>2美元/Gb：15天内不激活会自动激活，激活后3天使用时间</p>
+            <p>福利：全球流量</p>
+            <p class="price">$2.00</p>
+            <a href="payment.html?product=product3&price=2" class="btn">购买</a>
+        </div>  
     </div>
 
     <h2>联系方式</h2>
@@ -135,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
