--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>  
         <div>
             <img src="images/liuliang.jpg" alt="产品编号4">
-            <p>产品编号4：流量套餐1G/3天</p>
+            <p>产品编号4：手机流量套餐1G/3天</p>
             <p>1美元/Gb：15天内不激活会自动激活，激活后3天使用时间</p>
             <p>福利：全球流量</p>
             <p class="price">$1.00</p>
@@ -143,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
